--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
 
   <script src="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
   <script src="//fb.me/react-0.13.1.js"></script>
   <script src="app.js"></script>
 </body>
