add posting comments and optimistic updates

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,9 @@
   <title>React template</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.0/material.indigo-pink.min.css">  
+  <style>
+    #app {width: 800px; margin:0 auto;}
+  </style>
 </head>
 <body>
   
